--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,7 @@
 .Ruserdata
 # Hugo static assets
 /public/
-# netlify
-/resources/
-# Hugo cache files
-.hugo_build.lock
+
 # R package libraries
 */library
 # Compiled source packages
@@ -24,5 +21,5 @@
 .Trashes
 ehthumbs.db
 Thumbs.db
-index.Rmd
-layouts/shortcodes/blogdown/postref.html
+
+/.quarto/
