--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,14 +2,14 @@ project:
   type: website
 
 website:
-  title: "quart_test"
+  title: "Data Wow"
   navbar:
     right:
       - about.qmd
       - icon: github
-        href: https://github.com/
+        href: https://github.com/QuantPsych
       - icon: twitter
-        href: https://twitter.com
+        href: https://twitter.com/dr_tofighi
 format:
   html:
     theme: cosmo
